@@ -1,3 +1,8 @@
+1999-08-12  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>
+
+	* FvwmPager/x_pager.c (MoveResizePagerView): fixed shrinking windows
+	when pager was resized
+
 1999-08-11  Hippo
 
 	* FvwmPager/* Mini-windows drawn in 3D if *FvwmPagerWindowColorsets used
